[gd_scene load_steps=7 format=3 uid="uid://de16fo3l8lx0m"]

[ext_resource type="Script" path="res://scenes/bosses/boss.gd" id="1_4ivqb"]
[ext_resource type="Shader" uid="uid://dugtrp8ej1uvx" path="res://shaders/hit_flash.tres" id="2_fidl2"]
[ext_resource type="PackedScene" uid="uid://bxwm5t8mu8mdx" path="res://scenes/components/health_component.tscn" id="3_5njm4"]
[ext_resource type="PackedScene" uid="uid://dugn6ue3cwdsv" path="res://scenes/components/hurt_box_component.tscn" id="4_6l00q"]
[ext_resource type="PackedScene" uid="uid://dkc3l14co1pqv" path="res://scenes/components/Animation/hit_flash_animation_player.tscn" id="5_3ixl1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qtn6w"]
resource_local_to_scene = true
shader = ExtResource("2_fidl2")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(1, 1, 1, 0.501961)

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_4ivqb")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qtn6w")

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
metadata/_edit_lock_ = true

[node name="HealthComponent" parent="." instance=ExtResource("3_5njm4")]

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("HEALTH_COMPONENT", "ANIMATION_PLAYER") instance=ExtResource("4_6l00q")]
collision_layer = 4
collision_mask = 2
HEALTH_COMPONENT = NodePath("../HealthComponent")
ANIMATION_PLAYER = NodePath("../HitFlashAnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]

[node name="HitFlashAnimationPlayer" parent="." instance=ExtResource("5_3ixl1")]
libraries = {}

[node name="PlayerProximityDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerProximityDetector"]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="death_signal" from="HealthComponent" to="." method="_on_health_component_death_signal"]
[connection signal="area_entered" from="PlayerProximityDetector" to="." method="_on_player_proximity_detector_area_entered"]
[connection signal="area_exited" from="PlayerProximityDetector" to="." method="_on_player_proximity_detector_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
